Fixed bugs and updated css for facebook comment box being cropped issue
git-svn-id: https://plugins.svn.wordpress.org/woocommerce-facebook-share-like-button/trunk@680615 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/fbshare.css
+++ b/css/fbshare.css
@@ -8,6 +8,14 @@
     height: 25px;
 }
 
-iframe.fb_ltr {
-    width: 360px !important;
+.fb-like { z-index: 9999; }
+
+.fbpdl { 
+	z-index: 9999 !important; width:300px;
+	overflow: visible;
 }
+
+.fb-like span { 
+	z-index: 9999 !important; width:300px !important;
+	overflow: visible;
+} 
